--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,8 @@
 <div class="wrapper">
-  <%= render "side_bar" %>＜サイドバー＞
-  <%= render "main_chat" %>＜チャット画面＞
+  <div class="side-bar">
+    <%= render "side_bar" %>
+  </div>
+  <div class="chat">
+    <%= render "main_chat" %>
+  </div>
 </div>
