--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -10,16 +10,41 @@
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+.create-room a {
+  font-size: 10px;
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
 }
 .rooms {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
-  padding: 0 20px;
+  padding: 0 20px 0 20px;
+  overflow: scroll;
+}
+.room {
+  padding: 20px 0 40px;
+}
+
+.room-name a {
+  text-decoration: none;
+  color: white;
 }
 .chat {
   background-color: #FFFFFF;
   width: calc(100vw - 300px);
-  padding: 0 40px;
+  padding: 0 40px 0 40px;
 }
 .chat-header {
   height: 100px;
@@ -27,10 +52,10 @@
 .messages {
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
-  padding: 46px 40px 0;
+  padding: 46px 40px 0 40px;
 }
 .form {
   background-color: #DDDDDD;
   height: 90px;
-  padding: 20px 40px;
+  padding: 20px 40px 20px 40px;
 }
