--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -17,7 +17,7 @@
   <% end %>
   <div class="room">
     <div class="room-name">
-      <a href="#">techroom2</a>
+      <%= link_to room.name, room_messages_path(room) %>
     </div>
   </div>
 </div>
